--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-themes": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-rough-notation": "^1.0.1"
   },
   "devDependencies": {
